--- a/index.html
+++ b/index.html
@@ -314,23 +314,42 @@
 
         <!-- ======= Team Section ======= -->
         <section id="team" class="team">
-            <div class="container" data-aos="fade-up ">
+            <div class="container " data-aos="fade-up ">
 
                 <div class="section-title ">
                     <h2>Echipă</h2>
                     <p>Aceasta este echipa noastră:</p>
                 </div>
-
                 <div class="row ">
-                    <div class=" col-lg-3 col-md-auto align-items-stretch ">
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch " style="align-content: center; align-items: center;">
+                        <div class="member " data-aos="fade-up " data-aos-delay="200 ">
+                            <div class="member-img ">
+                                <img src="assets/img/team/cosmasrs.jpg " class="img-fluid " alt=" ">
+                                <div class="social ">
+                                    <a href="https://twitter.com/Andrei_Cosma1" target="_blank"><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/andrei.cosma.7773/" target="_blank"><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/cosma_an/" target="_blank"><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/andrei-cosma-b185ab1a1/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info ">
+                                <h4>Cosma Andrei</h4>
+                                <span>CEO/Full-stack developer</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
                         <div class="member " data-aos="fade-up " data-aos-delay="400 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/mihai.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://twitter.com/ApopiMihai " target="_blank "><i class="bi bi-twitter "></i></a>
-                                    <a href="https://www.facebook.com/mihai1755/ " target="_blank "><i class="bi bi-facebook "></i></a>
-                                    <a href="https://www.instagram.com/mihai.17/ " target="_blank "><i class="bi bi-instagram "></i></a>
-                                    <a href="https://www.linkedin.com/in/mihai-apopi-998889208/ " target="_blank "><i class="bi bi-linkedin "></i></a>
+                                    <a href="https://twitter.com/ApopiMihai" target="_blank"><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/mihai1755/" target="_blank"><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/mihai.17/ " target="_blank"><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/mihai-apopi-998889208/" target="_blank"><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
@@ -339,15 +358,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class=" col-lg-3 ">
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
                         <div class="member " data-aos="fade-up " data-aos-delay="100 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/marcus.png " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://twitter.com/PreafericitulM " target="_blank "><i class="bi bi-twitter "></i></a>
-                                    <a href="https://www.facebook.com/red8red " target="_blank "><i class="bi bi-facebook "></i></a>
-                                    <a href="https://www.instagram.com/preafericitul_marcus/ " target="_blank "><i class="bi bi-instagram "></i></a>
-                                    <a href="https://www.linkedin.com/in/marcus-coman-b216b3207/ " target="_blank "><i class="bi bi-linkedin "></i></a>
+                                    <a href="https://twitter.com/PreafericitulM" target="_blank"><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/red8red" target="_blank"><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/preafericitul_marcus/" target="_blank"><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/marcus-coman-b216b3207/" target="_blank"><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
@@ -357,32 +376,16 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 ">
-                        <div class="member " data-aos="fade-up " data-aos-delay="200 ">
-                            <div class="member-img ">
-                                <img src="assets/img/team/cosmasrs.jpg " class="img-fluid " alt=" ">
-                                <div class="social ">
-                                    <a href="https://twitter.com/Andrei_Cosma1 " target="_blank "><i class="bi bi-twitter "></i></a>
-                                    <a href="https://www.facebook.com/andrei.cosma.7773/ " target="_blank "><i class="bi bi-facebook "></i></a>
-                                    <a href="https://www.instagram.com/cosma_an/ " target="_blank "><i class="bi bi-instagram "></i></a>
-                                    <a href="https://www.linkedin.com/in/andrei-cosma-b185ab1a1/ " target="_blank "><i class="bi bi-linkedin "></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info ">
-                                <h4>Cosma Andrei</h4>
-                                <span>CEO/Full-stack developer</span>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-3 ">
+
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
                         <div class="member " data-aos="fade-up " data-aos-delay="300 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/cristi.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://www.facebook.com/cristi.strugari.1 " target="_blank "><i class="bi bi-facebook "></i></a>
-                                    <a href=" https://www.instagram.com/cristi_silviu04/ " target="_blank "><i class="bi bi-instagram "></i></a>
-                                    <a href=" https://www.linkedin.com/in/cristian-silviu-130b841a9/ " target="_blank "><i class="bi bi-linkedin "></i></a>
+                                    <a href="https://www.facebook.com/cristi.strugari.1" target="_blank"><i class="bi bi-facebook "></i></a>
+                                    <a href=" https://www.instagram.com/cristi_silviu04/" target="_blank"><i class="bi bi-instagram "></i></a>
+                                    <a href=" https://www.linkedin.com/in/cristian-silviu-130b841a9/" target="_blank"><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
@@ -391,6 +394,7 @@
                             </div>
                         </div>
                     </div>
+
 
                     <div class="col-lg-3 col-md-auto align-items-stretch ">
                         <div class="member " data-aos="fade-up " data-aos-delay="400 ">
@@ -410,11 +414,14 @@
                         </div>
                     </div>
                 </div>
+
+
+            </div>
         </section>
         <!-- End Team Section -->
 
         <!-- ======= Contact Section ======= -->
-        <section id="contact " class="contact ">
+        <section id="contact" class="contact">
             <div class="container " data-aos="fade-up ">
 
                 <div class="section-title ">
@@ -449,7 +456,7 @@
 
                     <div class="col-lg-8 mt-5 mt-lg-0 ">
 
-                        <form action="https://formspree.io/f/xpzkpwqe " method="POST " role="form " class="php-email-form ">
+                        <form action="https://formspree.io/f/xpzkpwqe" method="POST" role="form " class="php-email-form ">
                             <div class="row ">
                                 <div class="col-md-6 form-group ">
                                     <input type="text " name="name " class="form-control " id="name " placeholder="Numele dumneavoastră " required>
@@ -469,7 +476,7 @@
                                 <div class="error-message "></div>
                                 <div class="sent-message ">Mesajul tău a fost trimis. Mulțumim!</div>
                             </div>
-                            <div class="text-center "><button class="btn btn-primary btn-xl text-uppercase " id="sendMessageButton " type="submit ">Trimitere mesaj</button></div>
+                            <div class="text-center "><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Trimitere mesaj</button></div>
 
                         </form>
 
@@ -484,20 +491,20 @@
     </main>
     <!-- End #main -->
     <!--Footer-->
-    <footer style="background-color: rgb(29, 29, 29); padding-top: 15px; text-align: center; ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-md-4 "><span class="copyright ">Copyright&nbsp;© Jmekerie 2021</span></div>
-                <div class="col-md-4 ">
-                    <ul class="list-inline social-buttons ">
-                        <li class="list-inline-item "><a href="https://www.instagram.com/jmekerie.tech/ " target="_blank "><i class="fa fa-instagram "></i></a></li>
-                        <li class="list-inline-item "><a href="https://www.facebook.com/jmekerie.tech/?notif_id=1614598071900012&notif_t=page_fan&ref=notif " target="_blank "><i class="fa fa-facebook "></i></a></li>
+    <footer style="background-color: rgb(29, 29, 29); padding-top: 15px; text-align: center;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"><span class="copyright">Copyright&nbsp;© Jmekerie 2021</span></div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li class="list-inline-item"><a href="https://www.instagram.com/jmekerie.tech/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/jmekerie.tech/?notif_id=1614598071900012&notif_t=page_fan&ref=notif" target="_blank"><i class="fa fa-facebook"></i></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 ">
-                    <ul class="list-inline quicklinks ">
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
 
-                        <li class="list-inline-item "><a href=" " target="_blank ">Made by jmekerie.tech team</a></li>
+                        <li class="list-inline-item"><a href="" target="_blank">Made by jmekerie.tech team</a></li>
                     </ul>
                 </div>
             </div>
