--- a/oposite.html
+++ b/oposite.html
@@ -10,7 +10,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/titlelogo.png" rel="icon">
+    <link href="assets/img/logo1.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -47,7 +47,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li>
-                        <a class="nav-link scrollto active" href="#hero">Acasă</a>
+                        <a class="nav-link scrollto active" href="index.html">Acasă</a>
                     </li>
                     <li><a class="nav-link scrollto" href="#about">Despre</a></li>
                     <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
